feat: register for admin user
