# docs/swagger.json
@@ -952,6 +952,10 @@
                     "type": "string",
                     "example": "riparuk@gmail.com"
                 },
+                "master_password": {
+                    "type": "string",
+                    "example": "secret-master"
+                },
                 "name": {
                     "type": "string",
                     "example": "Rifa Faruqi"
