# internal/model/user.go
@@ -43,7 +43,8 @@ type LoginRequest struct {
 }
 
 type RegisterRequest struct {
-	Name     string `json:"name" binding:"required" example:"Rifa Faruqi"`
-	Email    string `json:"email" binding:"required,email" example:"riparuk@gmail.com"`
-	Password string `json:"password" binding:"required" example:"strongpassword"`
+	Name           string `json:"name" binding:"required" example:"Rifa Faruqi"`
+	Email          string `json:"email" binding:"required,email" example:"riparuk@gmail.com"`
+	Password       string `json:"password" binding:"required" example:"strongpassword"`
+	MasterPassword string `json:"master_password,omitempty" example:"secret-master"`
 }
